docs: modify summary to pt-BR

--- a/docs/UserDocs/signin.yml
+++ b/docs/UserDocs/signin.yml
@@ -3,7 +3,7 @@ paths:
     post:
       tags:
         - 'User'
-      summary: Signin.
+      summary: Login de Usuário.
       requestBody:
         required: true
         content:
